--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/lutyd/Downloads/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar"/>
 	<classpathentry kind="lib" path="C:/Users/lutyd/Downloads/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
 	<classpathentry kind="lib" path="C:/Users/lutyd/Downloads/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
@@ -19,5 +18,6 @@
 	<classpathentry kind="lib" path="C:/Users/lutyd/Downloads/commons-io-2.8.0-bin/commons-io-2.8.0/commons-io-2.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/lutyd/Downloads/commons-io-2.8.0-bin/commons-io-2.8.0/commons-io-2.8.0-tests.jar"/>
 	<classpathentry kind="lib" path="C:/Users/lutyd/Downloads/commons-io-2.8.0-bin/commons-io-2.8.0/commons-io-2.8.0-test-sources.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
